--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -8,6 +8,7 @@ span{
 }
 .sidNav{
   width: 20%;
+  min-height:500px;
 
  
 }
@@ -22,6 +23,7 @@ span{
 .sidNavLi{
   font-size: 20px;
   text-align: center;
+  
 }
 .toolbar{
   margin-top: 15px;
