add enhancement to licenses component

--- a/src/app/license-list/update-license/update-license.component.html
+++ b/src/app/license-list/update-license/update-license.component.html
@@ -1,4 +1,12 @@
-<h1 mat-dialog-title>Edit Data</h1>
+<div class="row">
+    <div class="col-md-11">
+        <h1 mat-dialog-title>Edit Data</h1>
+    </div>
+    <div class="col-md-1">
+        <mat-icon style="cursor: pointer;" (click)="closePop()">close</mat-icon>
+    </div>
+</div>
+
 <div class="row" *ngIf="this.license">
     <div class="col-md-12">
         <mat-card>
