--- a/src/app/user-list/add-user-form/add-user-form.component.html
+++ b/src/app/user-list/add-user-form/add-user-form.component.html
@@ -1,4 +1,12 @@
 <div class="row">
+    <div class="col-md-11">
+        <h1 mat-dialog-title>Add new User</h1>
+    </div>
+    <div class="col-md-1">
+        <mat-icon style="cursor: pointer;" (click)="closePop()">close</mat-icon>
+    </div>
+</div>
+<div class="row">
     <div class="col-md-12">
         <mat-card>
             <mat-card-header>
