--- a/src/app/user-list/update-user/update-user.component.html
+++ b/src/app/user-list/update-user/update-user.component.html
@@ -1,9 +1,20 @@
-<h1 mat-dialog-title>Edit Data</h1>
+<div class="row">
+    <div class="col-md-11">
+        <h1 mat-dialog-title>Edit Data</h1>
+    </div>
+    <div class="col-md-1">
+        <mat-icon style="cursor: pointer;" (click)="closePop()">close</mat-icon>
+    </div>
+</div>
 <div class="row" *ngIf="this.user">
     <div class="col-md-12">
         <mat-card>
             <mat-card-header>
                 <mat-card-title>User Data</mat-card-title>
+               
+                    
+                
+                
               </mat-card-header>
             <form [formGroup]="updateForm" (ngSubmit)="onSubmit()">
                 <div class="row">
