--- a/src/app/bank-list/add-bank-form/add-bank-form.component.html
+++ b/src/app/bank-list/add-bank-form/add-bank-form.component.html
@@ -40,25 +40,10 @@
                     </div>
                 </div> 
                 <div class="row">
-                    <div class="col-md-7">
-                        <mat-form-field class="full-width">
-                            <mat-label>userId</mat-label>
-                            <input matInput formControlName="userId" >
-                            
-                        </mat-form-field>
-                        <span
-                            *ngIf="!addBankForm.get('userId').valid && addBankForm.get('userId').touched"
-                            class="help-block" style="color: red;">
-                            Please enter a userId
-                         </span>  
-                    </div>
-                </div>
-                <div class="row">
                     <div class="col-md-12">
                         <button mat-raised-button color="primary" type="submit" style="width: 100%;"
-                        [disabled]="!addBankForm.valid"
-                        >
-                           <strong> Add Bank</strong>
+                        [disabled]="!addBankForm.valid">
+                             <strong> Add Bank</strong>
                         </button>
                     </div>
                 </div>
