--- a/src/app/bank-list/bank-list.component.html
+++ b/src/app/bank-list/bank-list.component.html
@@ -4,63 +4,40 @@
           <mat-icon>add</mat-icon>
           <strong>Add Bank</strong>  
         </button>
-
     </div>
 </div>
-
  <div class="row">
     <div class="col-md-12">    
       <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort>
-      
-         
-          <ng-container matColumnDef="Id">
+        <table mat-table [dataSource]="dataSource" matSort>   
+          <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> bank id </th>
-            <td mat-cell *matCellDef="let element"> {{element.Id}} </td>
-          </ng-container>
-      
-          <ng-container matColumnDef="bankName">
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+          </ng-container>    
+          <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Bank Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.bankName}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
           </ng-container>
-
           <ng-container matColumnDef="country">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Country </th>
             <td mat-cell *matCellDef="let element"> {{element.country}} </td>
-          </ng-container>
-
-          <ng-container matColumnDef="userId">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> User Id </th>
-            <td mat-cell *matCellDef="let element"> {{element.userId}} </td>
-          </ng-container>
-      
-          
+          </ng-container>         
           <ng-container matColumnDef="Update" >
-            <th mat-header-cell *matHeaderCellDef class="action" > Update </th>
+            <th mat-header-cell *matHeaderCellDef > Update </th>
             <td mat-cell *matCellDef="let element">
-              <button mat-raised-button color="primary" class="btn" (click)="onUpdate(element)">
-                <mat-icon>edit</mat-icon>
-                  Update
-                </button>
+                <mat-icon (click)="onUpdate(element)" style="cursor: pointer;">edit</mat-icon>                 
             </td>
           </ng-container>
           <ng-container matColumnDef="Delete">
-            <th mat-header-cell *matHeaderCellDef class="action" > Delete </th>
+            <th mat-header-cell *matHeaderCellDef > Delete </th>
             <td mat-cell *matCellDef="let element">
-              <button mat-raised-button  color="warn" class="btn" (click)="onDelete(element)">
-                <mat-icon>delete</mat-icon>  
-                Delete 
-            </button> 
+                <mat-icon  (click)="onDelete(element)" style="cursor: pointer;" color="warn">delete</mat-icon>              
             </td>
-          </ng-container>
-      
+          </ng-container>   
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        </table>
-        
-        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons ></mat-paginator>
-      
-      
+        </table>      
+        <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons ></mat-paginator>   
       </div>
     </div>
   </div>
