--- a/src/app/license-list/license-list.component.html
+++ b/src/app/license-list/license-list.component.html
@@ -11,43 +11,34 @@
                 <table mat-table [dataSource]="dataSource" matSort>
               
                  
-                  <ng-container matColumnDef="Id">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> bank id </th>
-                    <td mat-cell *matCellDef="let element"> {{element.Id}} </td>
+                  <ng-container matColumnDef="id">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> license id </th>
+                    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
                   </ng-container>
               
-                  <ng-container matColumnDef="bankName">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Bank Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element.bankName}} </td>
+                  <ng-container matColumnDef="name">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Application Name </th>
+                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
                   </ng-container>
-        
-                  <ng-container matColumnDef="country">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> Country </th>
-                    <td mat-cell *matCellDef="let element"> {{element.country}} </td>
+                  <ng-container matColumnDef="creation_date">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> creation Date </th>
+                    <td mat-cell *matCellDef="let element"> {{element.creation_date  | date}} </td>
                   </ng-container>
-        
-                  <ng-container matColumnDef="userId">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header> User Id </th>
-                    <td mat-cell *matCellDef="let element"> {{element.userId}} </td>
+                  <ng-container matColumnDef="expiration_date">
+                    <th mat-header-cell *matHeaderCellDef mat-sort-header> expiration date </th>
+                    <td mat-cell *matCellDef="let element"> {{element.expiration_date  | date}} </td>
                   </ng-container>
-              
-                  
                   <ng-container matColumnDef="Update" >
-                    <th mat-header-cell *matHeaderCellDef class="action" > Update </th>
+                    <th mat-header-cell *matHeaderCellDef> Update </th>
                     <td mat-cell *matCellDef="let element">
-                      <button mat-raised-button color="primary" class="btn" (click)="onUpdate(element)">
-                        <mat-icon>edit</mat-icon>
-                          Update
-                        </button>
+                        <mat-icon (click)="onUpdate(element)" style="cursor: pointer;">edit</mat-icon>
+                         
                     </td>
                   </ng-container>
                   <ng-container matColumnDef="Delete">
-                    <th mat-header-cell *matHeaderCellDef class="action" > Delete </th>
+                    <th mat-header-cell *matHeaderCellDef> Delete </th>
                     <td mat-cell *matCellDef="let element">
-                      <button mat-raised-button  color="warn" class="btn" (click)="onDelete(element)">
-                        <mat-icon>delete</mat-icon>  
-                        Delete 
-                    </button> 
+                        <mat-icon (click)="onDelete(element)" style="cursor: pointer;" color="warn">delete</mat-icon>       
                     </td>
                   </ng-container>
               
