--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -11,9 +11,18 @@
  <div class="row">
     <div class="col-md-12">  
       <div class="mat-elevation-z8">
-        <table mat-table [dataSource]="dataSource" matSort>    <ng-container matColumnDef="userName">
+        <table mat-table [dataSource]="dataSource" matSort>
+          <ng-container matColumnDef="userName">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
             <td mat-cell *matCellDef="let element"> {{element.userName}} </td>
+          </ng-container>
+          <ng-container matColumnDef="creation_date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> creation Date </th>
+            <td mat-cell *matCellDef="let element"> {{element.creation_date  | date}} </td>
+          </ng-container>
+          <ng-container matColumnDef="birth_date">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> birth Date </th>
+            <td mat-cell *matCellDef="let element"> {{element.birth_date  | date}} </td>
           </ng-container>
           <ng-container matColumnDef="password">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> password </th>
@@ -23,24 +32,16 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> email </th>
             <td mat-cell *matCellDef="let element"> {{element.email}} </td>
           </ng-container>
-      
-      
           <ng-container matColumnDef="Update">
-            <th mat-header-cell *matHeaderCellDef class="action" > Update </th>
+            <th mat-header-cell *matHeaderCellDef  class="tableHead">Update </th>
             <td mat-cell *matCellDef="let element">
-              <button mat-raised-button color="primary" class="btn" (click)="onUpdate(element)">
-                <mat-icon>edit</mat-icon>
-                Update
-              </button>
+                <mat-icon (click)="onUpdate(element)" style="cursor: pointer;" >edit</mat-icon>              
             </td>
           </ng-container>
           <ng-container matColumnDef="Delete">
-            <th mat-header-cell *matHeaderCellDef class="action" > Delete </th>
+            <th mat-header-cell *matHeaderCellDef  class="tableHead"> Delete </th>
             <td mat-cell *matCellDef="let element">
-              <button mat-raised-button  color="warn" class="btn" (click)="onDelete(element)">
-                <mat-icon>delete</mat-icon>
-                Delete
-              </button> 
+                <mat-icon (click)="onDelete(element)" color="warn" style="cursor: pointer;">delete</mat-icon>
             </td>
           </ng-container>     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
