changes in naming of models attributes

--- a/src/app/bank-list/add-bank-form/add-bank-form.component.html
+++ b/src/app/bank-list/add-bank-form/add-bank-form.component.html
@@ -10,7 +10,7 @@
     <div class="col-md-12">
         <mat-card>
             <mat-card-header>
-                <mat-card-title>User Data</mat-card-title>
+                <mat-card-title>Bank Data</mat-card-title>
               </mat-card-header>
             <form [formGroup]="addBankForm" (ngSubmit)="onSubmit()">
                 <div class="row">
