--- a/src/app/license-list/add-form-license/add-form-license.component.html
+++ b/src/app/license-list/add-form-license/add-form-license.component.html
@@ -29,7 +29,7 @@
                           <span
                           *ngIf="!addLicenseForm.get('created_data').valid && addLicenseForm.get('created_data').touched"
                           class="help-block" style="color: red;">
-                          Please enter a valid creation_date!
+                          Please enter a valid creationDate!
                        </span>
                     </div>
 
