--- a/src/app/user-list/update-user/update-user.component.html
+++ b/src/app/user-list/update-user/update-user.component.html
@@ -44,7 +44,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <mat-form-field appearance="fill" class="full-width">
-                            <mat-label>birthDate</mat-label>
+                            <mat-label>BirthDate</mat-label>
                             <input matInput [matDatepicker]="dp1" disabled formControlName="birthDate">
                             <mat-datepicker-toggle matSuffix [for]="dp1"></mat-datepicker-toggle>
                             <mat-datepicker #dp1 disabled="false"></mat-datepicker>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="col-md-6">
                         <mat-form-field appearance="fill">
-                            <mat-label>Completely disabled creationDate</mat-label>
+                            <mat-label>CreationDate</mat-label>
                             <input matInput [matDatepicker]="dp2" disabled formControlName="creationDate">
                             <mat-datepicker-toggle matSuffix [for]="dp2"></mat-datepicker-toggle>
                             <mat-datepicker #dp2></mat-datepicker>
