--- a/src/app/license-list/license-list.component.html
+++ b/src/app/license-list/license-list.component.html
@@ -20,13 +20,13 @@
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Application Name </th>
                     <td mat-cell *matCellDef="let element"> {{element.name}} </td>
                   </ng-container>
-                  <ng-container matColumnDef="creation_date">
+                  <ng-container matColumnDef="creationDate">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> creation Date </th>
-                    <td mat-cell *matCellDef="let element"> {{element.creation_date  | date}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.creationDate  | date}} </td>
                   </ng-container>
-                  <ng-container matColumnDef="expiration_date">
+                  <ng-container matColumnDef="expirationDate">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> expiration date </th>
-                    <td mat-cell *matCellDef="let element"> {{element.expiration_date  | date}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.expirationDate  | date}} </td>
                   </ng-container>
                   <ng-container matColumnDef="Update" >
                     <th mat-header-cell *matHeaderCellDef> Update </th>
