--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -16,13 +16,13 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
             <td mat-cell *matCellDef="let element"> {{element.userName}} </td>
           </ng-container>
-          <ng-container matColumnDef="creation_date">
+          <ng-container matColumnDef="creationDate">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> creation Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.creation_date  | date}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.creationDate  | date}} </td>
           </ng-container>
-          <ng-container matColumnDef="birth_date">
+          <ng-container matColumnDef="birthDate">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> birth Date </th>
-            <td mat-cell *matCellDef="let element"> {{element.birth_date  | date}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.birthDate  | date}} </td>
           </ng-container>
           <ng-container matColumnDef="password">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> password </th>
