add http requests to all components

--- a/src/app/bank-list/update-bank/update-bank.component.html
+++ b/src/app/bank-list/update-bank/update-bank.component.html
@@ -5,7 +5,7 @@
     <div class="col-md-1">
         <mat-icon style="cursor: pointer;" (click)="closePop()">close</mat-icon>
     </div>
-</div><div class="row" *ngIf="this.bank">
+</div><div class="row" *ngIf="this.bankData">
     <div class="col-md-12">
         <mat-card>
             <mat-card-header>
