--- a/src/app/user-list/update-user/update-user.component.html
+++ b/src/app/user-list/update-user/update-user.component.html
@@ -8,7 +8,7 @@
 </div>
 <!-- { id:0, userName:'Omar',  password:'1111',email:'Omer@gmail.com', creationDate:2001/20/10, birthDate:2001/20/10 } -->
 
-<div class="row" *ngIf="this.user">
+<div class="row" *ngIf="this.userData">
     <div class="col-md-12">
         <mat-card>
             <mat-card-header>
