--- a/src/app/home/dashboard/side-content-table/side-content-table.component.html
+++ b/src/app/home/dashboard/side-content-table/side-content-table.component.html
@@ -7,28 +7,24 @@
       <div class="mat-elevation-z8">
         <table mat-table [dataSource]="dataSource">
       
-          <!-- Position Column -->
-          <ng-container matColumnDef="position">
+          <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef> No. </th>
-            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
           </ng-container>
       
-          <!-- Name Column -->
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Name </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+          <ng-container matColumnDef="applicationName">
+            <th mat-header-cell *matHeaderCellDef> applicationName </th>
+            <td mat-cell *matCellDef="let element"> {{element.applicationName}} </td>
           </ng-container>
       
-          <!-- Weight Column -->
-          <ng-container matColumnDef="weight">
-            <th mat-header-cell *matHeaderCellDef> Weight </th>
-            <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+          <ng-container matColumnDef="creationDate">
+            <th mat-header-cell *matHeaderCellDef> creationDate </th>
+            <td mat-cell *matCellDef="let element"> {{element.creationDate}} </td>
           </ng-container>
       
-          <!-- Symbol Column -->
-          <ng-container matColumnDef="symbol">
-            <th mat-header-cell *matHeaderCellDef> Symbol </th>
-            <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+          <ng-container matColumnDef="expirationDate">
+            <th mat-header-cell *matHeaderCellDef> expirationDate </th>
+            <td mat-cell *matCellDef="let element"> {{element.expirationDate}} </td>
           </ng-container>
       
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -45,36 +41,32 @@
 
           <h3 md-display-1>Top 10 expired</h3>
           <div class="mat-elevation-z8">
-            <table mat-table [dataSource]="dataSource">
-          
-              <!-- Position Column -->
-              <ng-container matColumnDef="position">
+            <table mat-table [dataSource]="dataSource2">
+      
+              <ng-container matColumnDef="id">
                 <th mat-header-cell *matHeaderCellDef> No. </th>
-                <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+                <td mat-cell *matCellDef="let element"> {{element.id}} </td>
               </ng-container>
           
-              <!-- Name Column -->
-              <ng-container matColumnDef="name">
-                <th mat-header-cell *matHeaderCellDef> Name </th>
-                <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+              <ng-container matColumnDef="applicationName">
+                <th mat-header-cell *matHeaderCellDef> applicationName </th>
+                <td mat-cell *matCellDef="let element"> {{element.applicationName}} </td>
               </ng-container>
           
-              <!-- Weight Column -->
-              <ng-container matColumnDef="weight">
-                <th mat-header-cell *matHeaderCellDef> Weight </th>
-                <td mat-cell *matCellDef="let element"> {{element.weight}} </td>
+              <ng-container matColumnDef="creationDate">
+                <th mat-header-cell *matHeaderCellDef> creationDate </th>
+                <td mat-cell *matCellDef="let element"> {{element.creationDate}} </td>
               </ng-container>
           
-              <!-- Symbol Column -->
-              <ng-container matColumnDef="symbol">
-                <th mat-header-cell *matHeaderCellDef> Symbol </th>
-                <td mat-cell *matCellDef="let element"> {{element.symbol}} </td>
+              <ng-container matColumnDef="expirationDate">
+                <th mat-header-cell *matHeaderCellDef> expirationDate </th>
+                <td mat-cell *matCellDef="let element"> {{element.expirationDate}} </td>
               </ng-container>
           
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
-          
+            
           
           
           </div>
