--- a/src/app/license-list/license-list.component.html
+++ b/src/app/license-list/license-list.component.html
@@ -16,9 +16,9 @@
                     <td mat-cell *matCellDef="let element"> {{element.id}} </td>
                   </ng-container>
               
-                  <ng-container matColumnDef="name">
+                  <ng-container matColumnDef="applicationName">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> Application Name </th>
-                    <td mat-cell *matCellDef="let element"> {{element.name}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.applicationName}} </td>
                   </ng-container>
                   <ng-container matColumnDef="creationDate">
                     <th mat-header-cell *matHeaderCellDef mat-sort-header> creation Date </th>
