--- a/src/app/user-list/user-list.component.html
+++ b/src/app/user-list/user-list.component.html
@@ -28,10 +28,10 @@
             <th mat-header-cell *matHeaderCellDef mat-sort-header> password </th>
             <td mat-cell *matCellDef="let element"> {{element.password}} </td>
           </ng-container>
-          <ng-container matColumnDef="email">
+          <!-- <ng-container matColumnDef="email">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> email </th>
             <td mat-cell *matCellDef="let element"> {{element.email}} </td>
-          </ng-container>
+          </ng-container> -->
           <ng-container matColumnDef="Update">
             <th mat-header-cell *matHeaderCellDef  class="tableHead">Update </th>
             <td mat-cell *matCellDef="let element">
