--- a/src/app/home/dashboard/dashboard.component.html
+++ b/src/app/home/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="row" >
-    <div class="col-md-12">
+    <div class="col-md-12" style="background-color: rgb(255, 255, 255);">
       <app-statistical-info></app-statistical-info> 
      </div>
 </div> 
